# expony

./: README.org  pyproject.toml
docs/: autoplay.org
src/expony/: __init__.py  arr.py  autogui.py  box.py  data.py  funcs.py  gpu.py  gui.py  tiling.py
tests/: test_arr.py  test_box.py  test_data.py  test_funcs.py  test_gpu.py  test_tiling.py
