[project]
name = "expony"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brett Viren", email = "brett.viren@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.5",
]

[project.scripts]
expony = "expony:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
