[project]
name = "expony"
version = "0.1.0"
description = "A Python clone of exponentile"
readme = {file = "README.org", content-type = "text/org"}
authors = [
    { name = "Brett Viren", email = "brett.viren@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
    "pytest>=8.3.5",
]

[project.scripts]
expony = "expony:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
